--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "topthink/framework": "5.1.*"
+        "topthink/framework": "5.1.*",
+        "phpmailer/phpmailer": "^6.3",
+        "topthink/think-captcha": "2.*"
     },
     "autoload": {
         "psr-4": {
